--- a/blog/assets/blog.css
+++ b/blog/assets/blog.css
@@ -601,6 +601,9 @@ body {
 .fade-up-delay-4 { transition-delay: 0.4s; }
 .fade-up-delay-5 { transition-delay: 0.5s; }
 .fade-up-delay-6 { transition-delay: 0.6s; }
+.fade-up-delay-7 { transition-delay: 0.7s; }
+.fade-up-delay-8 { transition-delay: 0.8s; }
+.fade-up-delay-9 { transition-delay: 0.9s; }
 
 @keyframes fadeIn {
     from {
