--- a/blog/assets/blog.css
+++ b/blog/assets/blog.css
@@ -604,6 +604,9 @@ body {
 .fade-up-delay-7 { transition-delay: 0.7s; }
 .fade-up-delay-8 { transition-delay: 0.8s; }
 .fade-up-delay-9 { transition-delay: 0.9s; }
+.fade-up-delay-10 { transition-delay: 1.0s; }
+.fade-up-delay-11 { transition-delay: 1.1s; }
+.fade-up-delay-12 { transition-delay: 1.2s; }
 
 @keyframes fadeIn {
     from {
